--- a/src/Leagueoflegends.Support/Themes/Units/RIotSpellBadge.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RIotSpellBadge.xaml
@@ -16,39 +16,27 @@
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotSpellBadge">
           <Border x:Name="RootBorder" Style="{StaticResource SpellBorderStyle}">
-            <Grid>
-              <Image x:Name="ItemImage" Source="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=SpellName, Converter={StaticResource SpellNameToImageConverter}}"/>
-              <Border x:Name="OverlayBorder" Background="Transparent"/>
-            </Grid>
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
                 <VisualState x:Name="Normal"/>
                 <VisualState x:Name="PointerOver">
                   <Storyboard>
-                    <ColorAnimation
-                      Storyboard.TargetName="RootBorder" 
-                      Storyboard.TargetProperty="(Border.BorderBrush).(SolidColorBrush.Color)"
-                      To="#C89B3C" Duration="0:0:0.52"/>
-                    <ColorAnimation
-                      Storyboard.TargetName="OverlayBorder" 
-                      Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
-                      To="#33F0E6D2" Duration="0:0:0.2"/>
+                    <ColorAnimation Storyboard.TargetName="RootBorder" Storyboard.TargetProperty="(Border.BorderBrush).(SolidColorBrush.Color)" To="#C89B3C" Duration="0:0:0.52"/>
+                    <ColorAnimation Storyboard.TargetName="OverlayBorder" Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)" To="#33F0E6D2" Duration="0:0:0.2"/>
                   </Storyboard>
                 </VisualState>
                 <VisualState x:Name="Pressed">
                   <Storyboard>
-                    <ColorAnimation
-                      Storyboard.TargetName="RootBorder" 
-                      Storyboard.TargetProperty="(Border.BorderBrush).(SolidColorBrush.Color)"
-                      To="#F0E6D2" Duration="0:0:0.1"/>
-                    <ColorAnimation
-                      Storyboard.TargetName="OverlayBorder" 
-                      Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
-                      To="#66785A28" Duration="0:0:0.1"/>
+                    <ColorAnimation Storyboard.TargetName="RootBorder" Storyboard.TargetProperty="(Border.BorderBrush).(SolidColorBrush.Color)" To="#F0E6D2" Duration="0:0:0.1"/>
+                    <ColorAnimation Storyboard.TargetName="OverlayBorder" Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)" To="#66785A28" Duration="0:0:0.1"/>
                   </Storyboard>
                 </VisualState>
               </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
+            <Grid>
+              <Image x:Name="ItemImage" Source="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=SpellName, Converter={StaticResource SpellNameToImageConverter}}"/>
+              <Border x:Name="OverlayBorder" Background="Transparent"/>
+            </Grid>
           </Border>
         </ControlTemplate>
       </Setter.Value>
