--- a/src/Leagueoflegends.Support/Themes/Units/RiotPlayButton.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotPlayButton.xaml
@@ -51,6 +51,14 @@
     <Setter Property="Margin" Value="40,5,4,-5"/>
   </Style>
 
+  <Style x:Key="ContentStyle" TargetType="TextBlock">
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+    <Setter Property="Margin" Value="30,0,0,0"/>
+    <Setter Property="FontSize" Value="15"/>
+    <Setter Property="FontWeight" Value="Bold"/>
+  </Style>
+
   <Style TargetType="units:RiotPlayButton">
     <Setter Property="Height" Value="38"/>
     <Setter Property="Width" Value="165"/>
@@ -59,7 +67,7 @@
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotPlayButton">
-          <Grid x:Name="RootGrid" Background="{TemplateBinding Background}">
+          <Grid Background="{TemplateBinding Background}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
                 <VisualState x:Name="Normal"/>
@@ -67,32 +75,26 @@
                   <VisualState.Setters>
                     <Setter Target="path.Fill" Value="{StaticResource ArrowFillOver}"/>
                     <Setter Target="path.Stroke" Value="{StaticResource ArrowStrokeOver}"/>
-                    <Setter Target="ContentPresenter.Foreground" Value="#FFFCF1DC"/>
+                    <Setter Target="PlayText.Foreground" Value="#FFFCF1DC"/>
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Pressed"/>
                 <VisualState x:Name="Disabled"/>
               </VisualStateGroup>
               <VisualStateGroup x:Name="CheckStates">
+                <VisualState x:Name="Unchecked"/>
                 <VisualState x:Name="Checked">
                   <VisualState.Setters>
                     <Setter Target="path.Fill" Value="#1E2328"/>
                     <Setter Target="path.Stroke" Value="#5C5B57"/>
-                    <Setter Target="ContentPresenter.Foreground" Value="#3C3C41"/>
-                  </VisualState.Setters>
-                </VisualState>
-                <VisualState x:Name="Unchecked">
-                  <VisualState.Setters>
-                    <Setter Target="path.Fill" Value="#1E2328"/>
-                    <Setter Target="path.Stroke" Value="{StaticResource ArrowStroke}"/>
-                    <Setter Target="ContentPresenter.Foreground" Value="#FFFFFF"/>
+                    <Setter Target="PlayText.Foreground" Value="#AAAAAA"/>
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="CheckedPointerOver">
                   <VisualState.Setters>
-                    <Setter Target="path.Fill" Value="{StaticResource ArrowFillOver}"/>
-                    <Setter Target="path.Stroke" Value="{StaticResource ArrowStrokeOver}"/>
-                    <Setter Target="ContentPresenter.Foreground" Value="#FFFCF1DC"/>
+                    <Setter Target="path.Fill" Value="#1E2328"/>
+                    <Setter Target="path.Stroke" Value="#5C5B57"/>
+                    <Setter Target="PlayText.Foreground" Value="#CCCCCC"/>
                   </VisualState.Setters>
                 </VisualState>
               </VisualStateGroup>
@@ -101,13 +103,7 @@
             <Image Style="{StaticResource Emblem}"/>
             <Border Style="{StaticResource GreenLine}"/>
             <Path x:Name="path" Style="{StaticResource Arrow}"/>
-            <TextBlock x:Name="ContentPresenter"
-                       Text="{Binding IsChecked, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource BoolToPlayStopConverter}}"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       Margin="30,0,0,0"
-                       FontSize="15"
-                       FontWeight="Bold"/>
+            <TextBlock x:Name="PlayText" Style="{StaticResource ContentStyle}" Text="PLAY"/>
           </Grid>
         </ControlTemplate>
       </Setter.Value>
