--- a/src/Leagueoflegends.Support/Themes/Units/RiotRecentActivityListBox.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotRecentActivityListBox.xaml
@@ -17,14 +17,28 @@
     <GradientStop Color="#00A3B3" Offset="1"/>
   </LinearGradientBrush>
 
+  <Style x:Key="ActivityBarBackgroundStyle" TargetType="Rectangle">
+    <Setter Property="Fill" Value="#1E2328"/>
+  </Style>
+
+  <Style x:Key="ActivityBarForegroundStyle" TargetType="Rectangle">
+    <Setter Property="Fill" Value="{StaticResource ActivityBarForegroundBrush}"/>
+    <Setter Property="VerticalAlignment" Value="Bottom"/>
+  </Style>
+
+  <Style x:Key="ActivityBarBorderStyle" TargetType="Border">
+    <Setter Property="BorderBrush" Value="{StaticResource ActivityBarBorderBrush}"/>
+    <Setter Property="BorderThickness" Value="1"/>
+  </Style>
+
   <Style TargetType="units:RiotActivityBar">
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotActivityBar">
-          <Border BorderBrush="{StaticResource ActivityBarBorderBrush}" BorderThickness="1">
+          <Border Style="{StaticResource ActivityBarBorderStyle}">
             <Grid>
-              <Rectangle x:Name="PART_Background" Fill="#1E2328"/>
-              <Rectangle x:Name="PART_Foreground" Fill="{StaticResource ActivityBarForegroundBrush}" VerticalAlignment="Bottom"/>
+              <Rectangle x:Name="PART_Background" Style="{StaticResource ActivityBarBackgroundStyle}"/>
+              <Rectangle x:Name="PART_Foreground" Style="{StaticResource ActivityBarForegroundStyle}"/>
             </Grid>
           </Border>
         </ControlTemplate>
@@ -32,26 +46,43 @@
     </Setter>
   </Style>
 
+  <Style x:Key="ActivityBarStyle" TargetType="units:RiotActivityBar">
+    <Setter Property="Height" Value="92"/>
+    <Setter Property="Width" Value="8"/>
+    <Setter Property="Margin" Value="0 20 0 20"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+  </Style>
+
+  <Style x:Key="ActivityIconStyle" TargetType="Image">
+    <Setter Property="Height" Value="30"/>
+    <Setter Property="Width" Value="30"/>
+    <Setter Property="Stretch" Value="Uniform"/>
+    <Setter Property="Margin" Value="6"/>
+  </Style>
+
   <Style TargetType="units:RiotRecentActivityListBoxItem">
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotRecentActivityListBoxItem">
           <StackPanel>
-            <units:RiotActivityBar
-              Height="92" Width="8"
-              Margin="0 20 0 20"
-              Value="{Binding ActivePercent}"
-              HorizontalAlignment="Center"/>
-            <Image
-              Source="{Binding Concept, Converter={StaticResource ConceptToImageConverter}}" 
-              Height="30" 
-              Width="30"
-              Stretch="Uniform"
-              Margin="6"/>
+            <units:RiotActivityBar Style="{StaticResource ActivityBarStyle}" Value="{Binding ActivePercent}"/>
+            <Image Style="{StaticResource ActivityIconStyle}" Source="{Binding Concept, Converter={StaticResource ConceptToImageConverter}}"/>
           </StackPanel>
         </ControlTemplate>
       </Setter.Value>
     </Setter>
+  </Style>
+
+  <Style x:Key="RecentActivityTitleStyle" TargetType="TextBlock">
+    <Setter Property="Foreground" Value="#F0E2BE"/>
+    <Setter Property="FontWeight" Value="Bold"/>
+    <Setter Property="Margin" Value="0,0,0,10"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+  </Style>
+
+  <Style x:Key="RecentActivityItemsPresenterStyle" TargetType="ItemsPresenter">
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="Grid.Row" Value="1"/>
   </Style>
 
   <Style TargetType="units:RiotRecentActivityListBox">
@@ -63,12 +94,8 @@
               <RowDefinition Height="Auto"/>
               <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <TextBlock Text="RECENT ACTIVITY" 
-                              Foreground="#F0E2BE" 
-                              FontWeight="Bold" 
-                              Margin="0,0,0,10" 
-                              HorizontalAlignment="Center"/>
-            <ItemsPresenter Grid.Row="1" HorizontalAlignment="Center"/>
+            <TextBlock Style="{StaticResource RecentActivityTitleStyle}" Text="RECENT ACTIVITY"/>
+            <ItemsPresenter Style="{StaticResource RecentActivityItemsPresenterStyle}"/>
           </Grid>
         </ControlTemplate>
       </Setter.Value>
