--- a/src/Leagueoflegends.Support/Themes/Units/RiotScrollViewer.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotScrollViewer.xaml
@@ -2,20 +2,69 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:units="using:Leagueoflegends.Support.UI.Units">
+
+  <x:String x:Key="ScrollBarThumbColor">#CDBE91</x:String>
+
+  <Style x:Key="ScrollContentPresenterStyle" TargetType="ScrollContentPresenter">
+    <Setter Property="Grid.RowSpan" Value="2"/>
+    <Setter Property="Grid.ColumnSpan" Value="2"/>
+  </Style>
+
+  <Style x:Key="ScrollBarThumbStyle" TargetType="Thumb">
+    <Setter Property="Background" Value="{StaticResource ScrollBarThumbColor}"/>
+  </Style>
+
+  <Style x:Key="ScrollBarBorderStyle" TargetType="Border">
+    <Setter Property="CornerRadius" Value="4"/>
+    <Setter Property="Background" Value="Transparent"/>
+  </Style>
+
+  <ControlTemplate x:Key="ScrollBarTemplate" TargetType="ScrollBar">
+    <Grid>
+      <Border Style="{StaticResource ScrollBarBorderStyle}">
+        <Thumb x:Name="Thumb" Style="{StaticResource ScrollBarThumbStyle}"/>
+      </Border>
+      <VisualStateManager.VisualStateGroups>
+        <VisualStateGroup x:Name="ScrollingStates">
+          <VisualState x:Name="Scrolling">
+            <Storyboard>
+              <DoubleAnimation Storyboard.TargetName="Thumb" Storyboard.TargetProperty="Opacity" To="1" Duration="0:0:0.2"/>
+            </Storyboard>
+          </VisualState>
+          <VisualState x:Name="NotScrolling">
+            <Storyboard>
+              <DoubleAnimation Storyboard.TargetName="Thumb" Storyboard.TargetProperty="Opacity" To="0" Duration="0:0:0.2"/>
+            </Storyboard>
+          </VisualState>
+        </VisualStateGroup>
+      </VisualStateManager.VisualStateGroups>
+    </Grid>
+  </ControlTemplate>
+
+  <Style x:Key="VerticalScrollBarStyle" TargetType="ScrollBar">
+    <Setter Property="Orientation" Value="Vertical"/>
+    <Setter Property="Template" Value="{StaticResource ScrollBarTemplate}"/>
+  </Style>
+
+  <Style x:Key="HorizontalScrollBarStyle" TargetType="ScrollBar">
+    <Setter Property="Orientation" Value="Horizontal"/>
+    <Setter Property="Template" Value="{StaticResource ScrollBarTemplate}"/>
+  </Style>
+
   <Style TargetType="units:RiotScrollViewer">
-    <Setter Property="HorizontalScrollBarVisibility" Value="Auto" />
-    <Setter Property="VerticalScrollBarVisibility" Value="Auto" />
-    <Setter Property="HorizontalScrollMode" Value="Enabled" />
-    <Setter Property="VerticalScrollMode" Value="Enabled" />
-    <Setter Property="ZoomMode" Value="Disabled" />
-    <Setter Property="Background" Value="Transparent" />
+    <Setter Property="HorizontalScrollBarVisibility" Value="Auto"/>
+    <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
+    <Setter Property="HorizontalScrollMode" Value="Enabled"/>
+    <Setter Property="VerticalScrollMode" Value="Enabled"/>
+    <Setter Property="ZoomMode" Value="Disabled"/>
+    <Setter Property="Background" Value="Transparent"/>
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotScrollViewer">
           <Border
-              BorderBrush="{TemplateBinding BorderBrush}"
-              BorderThickness="{TemplateBinding BorderThickness}"
-              CornerRadius="{TemplateBinding CornerRadius}">
+            BorderBrush="{TemplateBinding BorderBrush}"
+            BorderThickness="{TemplateBinding BorderThickness}"
+            CornerRadius="{TemplateBinding CornerRadius}">
             <Grid Background="{TemplateBinding Background}">
               <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -26,96 +75,25 @@
                 <RowDefinition Height="Auto" />
               </Grid.RowDefinitions>
               <ScrollContentPresenter
-                  x:Name="ScrollContentPresenter"
-                  Grid.RowSpan="2"
-                  Grid.ColumnSpan="2"
-                  Margin="{TemplateBinding Padding}" />
+                x:Name="ScrollContentPresenter"
+                Style="{StaticResource ScrollContentPresenterStyle}"
+                Margin="{TemplateBinding Padding}" />
               <ScrollBar
-                  x:Name="VerticalScrollBar"
-                  Grid.Column="1"
-                  Orientation="Vertical"
-                  Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"
-                  Value="{TemplateBinding VerticalOffset}"
-                  ViewportSize="{TemplateBinding ViewportHeight}"
-                  Maximum="{TemplateBinding ScrollableHeight}">
-                <ScrollBar.Template>
-                  <ControlTemplate TargetType="ScrollBar">
-                    <Grid>
-                      <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                      </Grid.RowDefinitions>
-                      <Border CornerRadius="4" Background="Transparent">
-                        <Thumb x:Name="VerticalThumb" Background="#CDBE91" />
-                      </Border>
-                      <VisualStateManager.VisualStateGroups>
-                        <VisualStateGroup x:Name="ScrollingStates">
-                          <VisualState x:Name="Scrolling">
-                            <Storyboard>
-                              <DoubleAnimation
-                                Storyboard.TargetName="VerticalThumb"
-                                Storyboard.TargetProperty="Opacity"
-                                To="1"
-                                Duration="0:0:0.2" />
-                            </Storyboard>
-                          </VisualState>
-                          <VisualState x:Name="NotScrolling">
-                            <Storyboard>
-                              <DoubleAnimation
-                                Storyboard.TargetName="VerticalThumb"
-                                Storyboard.TargetProperty="Opacity"
-                                To="0"
-                                Duration="0:0:0.2" />
-                            </Storyboard>
-                          </VisualState>
-                        </VisualStateGroup>
-                      </VisualStateManager.VisualStateGroups>
-                    </Grid>
-                  </ControlTemplate>
-                </ScrollBar.Template>
-              </ScrollBar>
+                x:Name="VerticalScrollBar"
+                Grid.Column="1"
+                Style="{StaticResource VerticalScrollBarStyle}"
+                Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"
+                Value="{TemplateBinding VerticalOffset}"
+                ViewportSize="{TemplateBinding ViewportHeight}"
+                Maximum="{TemplateBinding ScrollableHeight}"/>
               <ScrollBar
-                  x:Name="HorizontalScrollBar"
-                  Grid.Row="1"
-                  Orientation="Horizontal"
-                  Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
-                  Value="{TemplateBinding HorizontalOffset}"
-                  ViewportSize="{TemplateBinding ViewportWidth}"
-                  Maximum="{TemplateBinding ScrollableWidth}">
-                <ScrollBar.Template>
-                  <ControlTemplate TargetType="ScrollBar">
-                    <Grid>
-                      <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                      </Grid.ColumnDefinitions>
-                      <Border CornerRadius="4" Background="Transparent">
-                        <Thumb x:Name="HorizontalThumb" Background="#CDBE91" />
-                      </Border>
-                      <VisualStateManager.VisualStateGroups>
-                        <VisualStateGroup x:Name="ScrollingStates">
-                          <VisualState x:Name="Scrolling">
-                            <Storyboard>
-                              <DoubleAnimation
-                                Storyboard.TargetName="HorizontalThumb"
-                                Storyboard.TargetProperty="Opacity"
-                                To="1"
-                                Duration="0:0:0.2" />
-                            </Storyboard>
-                          </VisualState>
-                          <VisualState x:Name="NotScrolling">
-                            <Storyboard>
-                              <DoubleAnimation
-                                Storyboard.TargetName="HorizontalThumb"
-                                Storyboard.TargetProperty="Opacity"
-                                To="0"
-                                Duration="0:0:0.2" />
-                            </Storyboard>
-                          </VisualState>
-                        </VisualStateGroup>
-                      </VisualStateManager.VisualStateGroups>
-                    </Grid>
-                  </ControlTemplate>
-                </ScrollBar.Template>
-              </ScrollBar>
+                x:Name="HorizontalScrollBar"
+                Grid.Row="1"
+                Style="{StaticResource HorizontalScrollBarStyle}"
+                Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
+                Value="{TemplateBinding HorizontalOffset}"
+                ViewportSize="{TemplateBinding ViewportWidth}"
+                Maximum="{TemplateBinding ScrollableWidth}"/>
             </Grid>
           </Border>
         </ControlTemplate>
