--- a/src/Leagueoflegends.Support/Themes/Units/RiotSkinTierButton.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotSkinTierButton.xaml
@@ -2,14 +2,33 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:units="using:Leagueoflegends.Support.UI.Units">
+
+  <Style x:Key="SkinTierButtonImageStyle" TargetType="Image">
+    <Setter Property="Width" Value="24"/>
+    <Setter Property="Height" Value="24"/>
+  </Style>
+
+  <Style x:Key="SkinTierButtonTextStyle" TargetType="TextBlock">
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+    <Setter Property="Foreground" Value="#A09B8C"/>
+    <Setter Property="FontSize" Value="12"/>
+    <Setter Property="Margin" Value="0,2,0,0"/>
+  </Style>
+
+  <Style x:Key="SkinTierButtonContainerStyle" TargetType="Grid">
+    <Setter Property="Width" Value="24"/>
+    <Setter Property="Height" Value="Auto"/>
+  </Style>
+
   <Style TargetType="units:RiotSkinTierButton">
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotSkinTierButton">
-          <Grid Width="24" Height="Auto">
+          <Grid Style="{StaticResource SkinTierButtonContainerStyle}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
-                <VisualState x:Name="Normal" />
+                <VisualState x:Name="Normal"/>
                 <VisualState x:Name="PointerOver">
                   <Storyboard>
                     <DoubleAnimation Storyboard.TargetName="ButtonScale" Storyboard.TargetProperty="ScaleX" To="1.1" Duration="0:0:0.1"/>
@@ -18,25 +37,19 @@
                 </VisualState>
                 <VisualState x:Name="Pressed">
                   <Storyboard>
-                    <DoubleAnimation Storyboard.TargetName="ButtonScale" Storyboard.TargetProperty="ScaleX" To="0.9" Duration="0:0:0.1"/>
-                    <DoubleAnimation Storyboard.TargetName="ButtonScale" Storyboard.TargetProperty="ScaleY" To="0.9" Duration="0:0:0.1"/>
+                    <DoubleAnimation Storyboard.TargetName="ButtonScale" Storyboard.TargetProperty="ScaleX" To="0.8" Duration="0:0:0.1"/>
+                    <DoubleAnimation Storyboard.TargetName="ButtonScale" Storyboard.TargetProperty="ScaleY" To="0.8" Duration="0:0:0.1"/>
                   </Storyboard>
                 </VisualState>
               </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
             <StackPanel>
-              <Image Source="{TemplateBinding ImageSource}" Width="24" Height="24">
+              <Image Style="{StaticResource SkinTierButtonImageStyle}" Source="{TemplateBinding ImageSource}">
                 <Image.RenderTransform>
                   <ScaleTransform x:Name="ButtonScale" ScaleX="1" ScaleY="1" CenterX="12" CenterY="12"/>
                 </Image.RenderTransform>
               </Image>
-              <TextBlock
-                Text="{TemplateBinding Count}" 
-                HorizontalAlignment="Center" 
-                VerticalAlignment="Center"
-                Foreground="#A09B8C"
-                FontSize="12"
-                Margin="0,2,0,0"/>
+              <TextBlock Style="{StaticResource SkinTierButtonTextStyle}" Text="{TemplateBinding Count}"/>
             </StackPanel>
           </Grid>
         </ControlTemplate>
