--- a/src/Leagueoflegends.Clash/Themes/Views/HubContent.xaml
+++ b/src/Leagueoflegends.Clash/Themes/Views/HubContent.xaml
@@ -11,10 +11,13 @@
         <ControlTemplate TargetType="views:HubContent">
           <Grid ColumnDefinitions="Auto, *">
             <units:RiotHubSummary/>
-            <units:RiotTabMenu Grid.Column="1">
-              <units:RiotTabMenuItem>SCHEDULE</units:RiotTabMenuItem>
-              <units:RiotTabMenuItem>HISTORY</units:RiotTabMenuItem>
-            </units:RiotTabMenu>
+            <Grid Grid.Column="1" RowDefinitions="Auto, *" Margin="30">
+              <units:RiotTabMenu>
+                <units:RiotTabMenuItem>SCHEDULE</units:RiotTabMenuItem>
+                <units:RiotTabMenuItem>HISTORY</units:RiotTabMenuItem>
+              </units:RiotTabMenu>
+              <units:RiotScheduleListBox Grid.Row="1" ItemsSource="{Binding Schedules}"/>
+            </Grid>
           </Grid>
         </ControlTemplate>
       </Setter.Value>
