--- a/src/Leagueoflegends.Support/Themes/Units/RiotTabMenuItem.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotTabMenuItem.xaml
@@ -2,8 +2,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:units="using:Leagueoflegends.Support.UI.Units">
-  <Style x:Key="ContentPresenterStyle" TargetType="ContentPresenter">
-    <Setter Property="Content" Value="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}"/>
+  
+  <Style x:Key="ContentPresenterStyle" TargetType="TextBlock">
     <Setter Property="Margin" Value="0 5 0 5"/>
     <Setter Property="FontWeight" Value="Bold"/>
     <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -61,7 +61,7 @@
               </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
             <Border x:Name="BorderElement">
-              <ContentPresenter x:Name="ContentPresenter" Style="{StaticResource ContentPresenterStyle}" Content="{TemplateBinding Content}"/>
+              <TextBlock x:Name="ContentPresenter" Style="{StaticResource ContentPresenterStyle}" Text="{Binding Name}"/>
             </Border>
           </Grid>
         </ControlTemplate>
